Editor: fix vertical alignment of check names

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -995,19 +995,14 @@ div.check a
 li.check
 {
     display: inline-block;
-    margin: 0 1em 0.5em -0.5em;
+    margin: -0.15em 1em 0.5em -0.5em;
     padding: 0.1em 0.5em;
     border-radius: 4px;
 }
 
-li.check-warning
+.check-warning
 {
-    height: 16px;
-}
-
-li.check-warning a
-{
-    vertical-align: middle;
+    line-height: 1.5;
 }
 
 #translate-checks-block.blink li.check
